fixed footer alignment and font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,12 @@
     src: 
          url("../fonts/Avenir-Black.woff") format("woff");
   }
+
+  @font-face {
+    font-family: "Avenir-book";
+    src: 
+         url("../fonts/Avenir-book.woff") format("woff");
+  }
 /* generral styles*/
 
 /* custom cursor added to body*/
@@ -11,28 +17,57 @@
       color:white;
       cursor: url(../images/bspoke-cursor.png), auto;
       cursor: url(../images/bspoke-cursor.png) 15 15, move;
-      font-family: Avenir, Helvetica, sans-serif;
+      font-family: Avenir-book, Helvetica, sans-serif;
   }
 
-.row{
-    margin:0!important;
-}
+
   h1{
       font-family: Avenir, Helvetica, sans-serif;
   }
 
   .blue-text{
-      color:#005E76
+      color:#005E76;
+      line-height: 1!important;
+  }
+
+
+ li span{
+      display:block;
   }
   /* hamburger nav button*/
-  .hamburger{
+  .hamburger ,.hamburger1{
       color:white;
-      font-size:2.5em;
-      padding:5px;
+      font-size:1.6em;
+   
+      padding:4px;
+      padding-bottom:20px;
       cursor: url(../images/bspoke-cursor.png), auto;
       cursor: url(../images/bspoke-cursor.png) 15 15, move;
    
   }
+
+  .hamburger{
+ 
+       
+  }
+
+  .hamburger1{
+      padding-top:10px!important;
+      margin-left:20px;
+      
+   
+  }
+
+.ham {
+    color:white;
+    font-size:1.6em;
+    margin-left:20px;
+    padding:4px;
+    padding-bottom:20px;
+    cursor: url(../images/bspoke-cursor.png), auto;
+    cursor: url(../images/bspoke-cursor.png) 15 15, move;
+  }
+
   .hamburger:hover{
       color:#54A6BB;
   }
@@ -71,8 +106,8 @@ width:600px!important;
 
   .nav-options li{
       text-transform: uppercase;
-  
-      font-size:2.4em;
+      line-height: 30px;
+      font-size:2.2em
   }
 
   .nav-options li a{
@@ -143,15 +178,16 @@ width:600px!important;
   display: none;
   }
 .contact h5{
-    font-size: 24px;
+    font-size: 20px;
+    font-family: Avenir, Helvetica, sans-serif;
 }
   .contact {
     text-align: right;
-    margin-right: 10px;
+    margin-right: 11px;
 }
 
 .contact-text{
-    font-size: 13px;
+    font-size: 12px;
     font-family: Avenir, Helvetica, sans-serif!important;
 }
 
@@ -179,6 +215,11 @@ width:600px!important;
     cursor: pointer;
 }
 
+.footer-margin{
+    margin-left:20px!important;
+    margin-right: 20px;
+}
+
 .social{
    text-align: right;
 }
@@ -187,17 +228,19 @@ width:600px!important;
     height:35px;
     width:35px;
     border-radius: 50%;
-    border:2px solid white;
+    border:1px solid white;
     text-align: center;
     padding-top:5px;
     float:right;
-    margin-left: 5px;
+    margin-left: 20px;
 
 }
 
 .privacy{
     text-align: right;
-    font-size: 13px;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: Avenir, Helvetica, sans-serif!important;
    
 }
 .legals{
@@ -468,6 +511,65 @@ h1{font-size: 4em;}
  }
 }
 /*................animations..............*/
+
+.slide-in-blurred-right {
+	-webkit-animation: slide-in-blurred-right 1.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+	        animation: slide-in-blurred-right 1.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2021-8-25 21:22:59
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation slide-in-blurred-right
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-in-blurred-right {
+    0% {
+      -webkit-transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+              transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+      -webkit-transform-origin: 0% 50%;
+              transform-origin: 0% 50%;
+      -webkit-filter: blur(40px);
+              filter: blur(40px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+              transform: translateX(0) scaleY(1) scaleX(1);
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      -webkit-filter: blur(0);
+              filter: blur(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-blurred-right {
+    0% {
+      -webkit-transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+              transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+      -webkit-transform-origin: 0% 50%;
+              transform-origin: 0% 50%;
+      -webkit-filter: blur(40px);
+              filter: blur(40px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+              transform: translateX(0) scaleY(1) scaleX(1);
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      -webkit-filter: blur(0);
+              filter: blur(0);
+      opacity: 1;
+    }
+  }
+  
 .slide-in-left {
 	-webkit-animation: slide-in-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: slide-in-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
